@@ -40,7 +40,7 @@
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   4646d328c5586fac8d11efa98334c0e4f9aac629 2018122800 mingw32-gettext.xml
   baa71c1c7546cc83cc6ed30a5b77e4cdbc449443 2018122800 mingw32-gmp.xml
-  78043cf88b63c84b8d40127cc6a4438c906b4795 2018122800 mingw32-isl.xml
+  5701d573ff000ba240d79338f8ac0b1768c29552 2018122900 mingw32-isl.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
   1c2147cc2b8175f077f78acee8cbee11cfb03dab 2018122800 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
@@ -51,7 +51,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   2d0fee36823579871e8d747ae4d4676da6071654 2018122800 mingw32-mpc.xml
   1b5e1e0c486dad8396884033777e13357365ad76 2018122800 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2018122900 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2018122901 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
