@@ -27,17 +27,17 @@
       <licence tarname="isl-%-mingw32-lic.tar.%" />
 
       <component class="dev">
-        <release tarname="isl-0.18-1-mingw32-dev.tar.xz" />
+        <release tarname="isl-0.18-2-mingw32-dev.tar.xz" />
         <requires eq="libisl-%-mingw32-dll-15.tar" />
         <requires ge="gmp-*-mingw32-dev.tar" />
       </component>
 
       <component class="doc">
-        <release tarname="isl-0.18-1-mingw32-doc.tar.xz" />
+        <release tarname="isl-0.18-2-mingw32-doc.tar.xz" />
       </component>
 
       <component class="lic">
-        <release tarname="isl-0.18-1-mingw32-lic.tar.xz" />
+        <release tarname="isl-0.18-2-mingw32-lic.tar.xz" />
       </component>
     </package>
 
@@ -60,7 +60,7 @@
       <licence tarname="isl-%-mingw32-lic.tar.%" />
 
       <component class="dll">
-        <release tarname="libisl-0.18-1-mingw32-dll-15.tar.xz" />
+        <release tarname="libisl-0.18-2-mingw32-dll-15.tar.xz" />
         <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
         <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
       </component>
@@ -69,5 +69,5 @@
   </package-collection>
 </software-distribution>
 
-<!-- vim: set textwidth=80 tabstop=2 shiftwidth=2 expandtab: -->
-<!-- vim: set fileformat=unix nocompatible: -->
+<!-- vim: set nocompatible showcmd expandtab tabstop=2 shiftwidth=2: -->
+<!-- vim: set fileformat=unix textwidth=80: -->
